sumo/tests/traci/variable_subscription/errors/UnknownVariable/testclient_out.traci
TraCITestClient output file. Date: Thu Jan 28 14:30:14 2016


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=212 objID=0 with 1 variables
.. Answered with error to command (212), [description: Could not add subscription (Get Vehicle Variable: unsupported variable 0xff specified).]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
